--- a/index.html
+++ b/index.html
@@ -7,3 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="calculator">
+        <div class="screen" id="screen">0</div>
+        <div class="buttons">
+            <button class="button" id="clear">C</button>
+            <button class="button" id="divide">÷</button>
+            <button class="button" id="multiply">×</button>
+            <button class="button" id="subtract">-</button>
+            <button class="button" id="seven">7</button>
+            <button class="button" id="eight">8</button>
+            <button class="button" id="nine">9</button>
+            <button class="button" id="add">+</button>
+            <button class="button" id="four">4</button>
+            <button class="button" id="five">5</button>
+            <button class="button" id="six">6</button>
+            <button class="button" id="equals">=</button>
+            <button class="button" id="one">1</button>
+            <button class="button" id="two">2</button>
+            <button class="button" id="three">3</button>
+            <button class="button" id="zero">0</button>
+            <button class="button" id="decimal">.</button>
+        </div>
+    </div>
+        <script src="script.js"></script>
+</body>
+</html>
